[gd_scene load_steps=5 format=3 uid="uid://dmho8ih3u432s"]

[ext_resource type="Script" path="res://scenes/pipes/pipes.gd" id="1_mvcdk"]
[ext_resource type="PackedScene" uid="uid://dk8ldtrwdapdj" path="res://scenes/laser/laser.tscn" id="1_ugckk"]
[ext_resource type="PackedScene" uid="uid://dcagtymrcblym" path="res://scenes/pipe/pipe.tscn" id="2_hd5wp"]
[ext_resource type="AudioStream" uid="uid://mph2cln8uwem" path="res://assets/audio/score.wav" id="3_eqj2f"]

[node name="Pipes" type="Node2D"]
script = ExtResource("1_mvcdk")

[node name="Laser" parent="." instance=ExtResource("1_ugckk")]

[node name="Upper" parent="." instance=ExtResource("2_hd5wp")]
position = Vector2(0, -80)
rotation = 3.14159

[node name="Lower" parent="." instance=ExtResource("2_hd5wp")]
position = Vector2(0, 80)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(25, 0)

[node name="ScoreSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_eqj2f")

[connection signal="body_entered" from="Laser" to="." method="_on_laser_body_entered"]
[connection signal="body_entered" from="Upper" to="." method="_on_pipe_body_entered"]
[connection signal="body_entered" from="Lower" to="." method="_on_pipe_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
